kubernetes_resource_report/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-resource-report-ingress
spec:
  rules:
  - host: kubernetes-resource-report.k8s.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-resource-report
          servicePort: 80
